--- a/config/app.yaml
+++ b/config/app.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-kind: List
+#kind: List
 spec: {}
 items:
 - apiVersion: project.openshift.io/v1
@@ -170,7 +170,7 @@ items:
     selfLink: /apis/route.openshift.io/v1/namespaces/tempapp/routes/temps
     uid: 74be2503-a8d5-4968-9312-3cdf05b24197
   spec:
-    host: temps-tempapp.apps.ocp4.example.com
+    host: tempapp.apps.ocp4.example.com
     port:
       targetPort: 8080-tcp
     to:
