--- a/config/app.yaml
+++ b/config/app.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-kind: List
+#kind: List
 spec: {}
 items:
 - apiVersion: project.openshift.io/v1
@@ -18,7 +18,7 @@ items:
     name: todo
     namespace: todoapp
   spec:
-    host: todo-todoapp.apps.ocp4.example.com
+    host: todoapp.apps.ocp4.example.com
     port:
       targetPort: 8080-tcp
     to:
